# Crypto-Trading-Journal

./: .gitignore  README.md  failed_py_files.py  features_to_add.txt  package-lock.json  pyproject.toml  todo.txt
Code_Reviews/: 11-25-2025.md  11-26-2025.md  11-27-2025.md  11-30-2025.md  12-01-2025.md  12-02-2025.md
backend/: main.py
backend/app/: main.py
backend/app/api/: auth_routes.py  journal_routes.py
backend/app/core/: auth_utils.py  database.py  middleware.py
backend/app/model/: auth_models.py  journal_models.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/api/: api.js
frontend/src/components/: Navbar.jsx  ProtectedRoutes.jsx  TradeForm.jsx  TradeItem.jsx  TradeList.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: Dashboard.jsx  Journal.jsx  Login.jsx  Register.jsx  RegisterTrade.jsx  Settings.jsx
frontend/src/pages/settings/: AccountSettings.jsx  ProfileSettings.jsx  SecuritySettings.jsx  ThemeSettings.jsx
src/crypto_journal_app/: __init__.py
